--- a/src/LayuiAvaloniaPack/Layui.Main/Views/FormPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/FormPage.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="LayuiApp.Views.FormPage"
+    x:Class="Layui.Main.Views.FormPage"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
