--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/Themes/Default.axaml
@@ -3,5 +3,7 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/FocusAdornerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ButtonStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TextBoxStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ComboBoxStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ComboBoxItemStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ProgressBarStyle.axaml" />
 </Styles>
