--- a/src/LayuiAvaloniaPack/Layui.Main/Views/ImagePage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/ImagePage.axaml
@@ -3,14 +3,32 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ext="using:LayUI.Avalonia.Extends"
     xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
     mc:Ignorable="d">
-    <TabControl>
-        <TabItem Header="当前目录下GIF图片">
-            <lay:LayGifImage Source="avares://LayuiApp/Assets/动图.gif" />
-        </TabItem>
-    </TabControl>
+    <Grid>
+        <Grid.Styles>
+            <Style Selector="TextBlock.MessageClose">
+                <Setter Property="IsVisible" Value="False" />
+            </Style>
+        </Grid.Styles>
+        <Image
+            Name="image"
+            ext:ImageHelper.IsLoaded="{Binding ImageIsLoaded}"
+            ext:ImageHelper.Source="https://lmg.jj20.com/up/allimg/1114/020R1102553/21020Q02553-1-1200.jpg" />
+        <!--  这里绑定附加属性没用直接报错  -->
+        <!--<TextBlock
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Text="{Binding ElementName=image, Path=(ext:ImageHelper.IsLoaded)}" />-->
+        <TextBlock
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Classes.MessageClose="{Binding !ImageIsLoaded}"
+            Text="正在加载....." />
+    </Grid>
+
 </UserControl>
