--- a/src/LayuiAvaloniaPack/LayuiApp/Views/MainWindow.axaml
+++ b/src/LayuiAvaloniaPack/LayuiApp/Views/MainWindow.axaml
@@ -9,7 +9,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:res="using:Layui.Core.Resources"
-    Title="LayuiApp"
+    Title="{DynamicResource Test}"
     d:DesignHeight="1080"
     d:DesignWidth="1920"
     prism:ViewModelLocator.AutoWireViewModel="True"
