--- a/src/LayuiAvaloniaPack/Layui.Main/Views/KeyboardPage.axaml
+++ b/src/LayuiAvaloniaPack/Layui.Main/Views/KeyboardPage.axaml
@@ -3,19 +3,17 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:lay="using:LayUI.Avalonia.Controls"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:prism="http://prismlibrary.com/"
     d:DesignHeight="450"
-    d:DesignWidth="800"
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
     <StackPanel>
-        <TextBox Name="test" Height="40" />
-        <Button
-            HorizontalAlignment="Stretch"
-            HorizontalContentAlignment="Center"
-            Command="{Binding KeyCommand}"
-            Content="点我测试"
-            Focusable="False" />
+        <lay:LayTextBox
+            Name="test"
+            Height="40"
+            Margin="5,10" />
+        <lay:LayKeyboard Margin="5,10" />
     </StackPanel>
 </UserControl>
