--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/Style/Default/DialogWindowStyle.axaml
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/Style/Default/DialogWindowStyle.axaml
@@ -27,6 +27,18 @@
             </Setter.Value>
         </Setter>
     </Style>
+    <Style Selector="dialog|LayDialogWindow[IsOpen=false] /template/ Grid#PART_Body">
+        <Style.Animations>
+            <Animation Duration="0:0:0.1">
+                <KeyFrame Cue="0%">
+                    <Setter Property="Opacity" Value="0.8" />
+                </KeyFrame>
+                <KeyFrame Cue="100%">
+                    <Setter Property="Opacity" Value="0.0" />
+                </KeyFrame>
+            </Animation>
+        </Style.Animations>
+    </Style>
     <Style Selector="dialog|LayDialogWindow[IsOpen=false] /template/ ContentPresenter#PART_ContentPresenter">
         <Style.Animations>
             <Animation Duration="0:0:0.1">
