--- a/src/LayuiAvaloniaPack/LayUI.Avalonia/Themes/Default.axaml
+++ b/src/LayuiAvaloniaPack/LayUI.Avalonia/Themes/Default.axaml
@@ -2,6 +2,7 @@
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ColorStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/FocusAdornerStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ButtonStyle.axaml" />
+    <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/CheckBoxStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/TextBoxStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ComboBoxStyle.axaml" />
     <StyleInclude Source="avares://LayUI.Avalonia/Style/Default/ComboBoxItemStyle.axaml" />
